[package]
name = "dehydrat"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.3"
pbr = "1.0.4"
reqwest = { version= "0.11.11", features= ["blocking"] }
tempfile = "3.3.0"
url = "2.2.2"
zip = "0.6.2"
